--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
                                 <h4 class="subheading">Our Humble Beginnings</h4>
                             </div>
                             <div class="timeline-body">
-                                <p class="text-muted">Maai-Systems is formed while building the LeetFlyer app</p>
+                                <p class="text-muted">Maai-Systems is formed</p>
                             </div>
                         </div>
                     </li>
